KSENROLL-12001 KSENROLL-12002 KSENROLL-12003 KSENROLL-12004 KSENROLL-12007 KSENROLL-12009 Updated styles as stopgap. Need to Redo all styles in a more stringent fashion.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-enroll/trunk@65646 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-enroll-ui/src/main/angular/registration/app/styles/less/global_styles/global_card.less
+++ b/ks-enroll-ui/src/main/angular/registration/app/styles/less/global_styles/global_card.less
@@ -10,11 +10,17 @@
     background-color: @cardBackgroundColor;
     border-color: @cardBorderColor;
     color: @cardTextColor;
+    cursor: pointer;
+    cursor: hand;
 }
 
 .panel {
     background-color: @cardBackgroundColor;
 
+}
+
+.panel-group .panel-heading + .panel-collapse .panel-body{
+    border-top:none;
 }
 
 .panel-title {
@@ -29,7 +35,15 @@
 
 .kscr-Card-text{
     color: #333333;
+}
+
+.kscr-CardDetails-text{
+    border-top:1px solid #F2F2F2;
+    color: #333333;
+    font-size: 14px;
+    font-family: 'Open Sans', sans-serif;
     font-weight: normal;
+    padding-top:5px;
 }
 
 .kscr-Card-supportText{
