--- a/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/cart.less
+++ b/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/cart.less
@@ -1,9 +1,9 @@
 /**** My Cart section ****/
 
 .kscr-cart-main-heading{
-  padding-left: 0.1em;
+  padding: 0.1em;
 }
 
 .kscr-cart-RegButton{
-   margin: -3em 2em 0 0;
+   margin: -2.2em 2em 0 0;
 }
