--- a/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/header.less
+++ b/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/header.less
@@ -10,9 +10,9 @@
 }
 
 .kscr-header-container{
-        -webkit-box-shadow: 0px 1px 5px 0px rgba(89,163,151,0.72);
-        -moz-box-shadow: 0px 1px 5px 0px rgba(89,163,151,0.72);
-        box-shadow: 0px 1px 5px 0px rgba(89,163,151,0.72);
+        /*-webkit-box-shadow: 0px 1px 5px 0px rgba(89,163,151,0.72);*/
+        /*-moz-box-shadow: 0px 1px 5px 0px rgba(89,163,151,0.72);*/
+        /*box-shadow: 0px 1px 5px 0px rgba(89,163,151,0.72);*/
 }
 
 .kscr-header-title{
