--- a/ks-enroll-ui/src/main/angular/registration/app/styles/less/util/alert.less
+++ b/ks-enroll-ui/src/main/angular/registration/app/styles/less/util/alert.less
@@ -1,22 +1,26 @@
 /**** Alert messages ****/
 
 .util-Alert {
-  border: 1px solid;
-  border-radius: 2px;
-  margin: 0.5rem;
-  padding: 0.5rem 0;
+    border: 1px solid;
+    border-radius: 2px;
+//    padding: 0.5rem 0;
+    padding: 10px;
+    color: #3B723B;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+    font-weight: normal;
 }
 
 .util-Alert--success {
-  background-color: #cce5cc;
-  border-color: #99cc99;
-  color: #004c00;
-  text-shadow: 0 .5px #fff;
+    background-color: #cce5cc;
+    border-color: #99cc99;
+    color: #3B723B;
+    text-shadow: 0 .5px #fff;
 }
 
 .util-Alert--error {
     background-color: #e59999;
     border-color: #cc6666;
-    color: #4c0000;
+    color: #723B3B;
     text-shadow: 0 .5px #fff;
 }
